--- a/webapp/WEB-INF/views/my-page/bookmark.html
+++ b/webapp/WEB-INF/views/my-page/bookmark.html
@@ -43,9 +43,9 @@
 		
 		
 		<div class="subHeader">
-			<a href="./menubar.html"><img id="menuBar-open" src="../../../assets/image/my-page/menu.png"></a>
+			<a href="./menubar.html"><img class="menuBar-open" src="../../../assets/image/my-page/menu.png"></a>
 			<p id="title">즐겨찾기 
-				<img id="myHome" src="../../../assets/image/my-page/star.png">
+				<img class="myHome" src="../../../assets/image/my-page/star.png">
 			</p>
 		</div>
 		
@@ -75,7 +75,7 @@
 							<ol>
 								<li>
 									<div style="cursor: pointer;" onclick="window.location='';">
-									  	<img id="courseImg" src="../../../assets/image/my-page/sample.jpg">
+									  	<img class="courseImg" src="../../../assets/image/my-page/sample.jpg">
 									  	<div id="textBox">
 											<p id="courseName">신나는 코스</p>
 											<p id="courseInfo">홍길동</p>
@@ -85,7 +85,7 @@
 								</li>
 								<li>
 									<div style="cursor: pointer;" onclick="window.location='';">
-									  	<img id="courseImg" src="../../../assets/image/my-page/sample2.jpg">
+									  	<img class="courseImg" src="../../../assets/image/my-page/sample2.jpg">
 									  	<div id="textBox">
 											<p id="courseName">이건아닌데...</p>
 											<p id="courseInfo">고길동</p>
@@ -105,7 +105,7 @@
 								</li>
 								<li>
 									<div style="cursor: pointer;" onclick="window.location='';">
-									  	<img id="courseImg" src="../../../assets/image/my-page/sample2.jpg">
+									  	<img class="courseImg" src="../../../assets/image/my-page/sample2.jpg">
 									  	<div id="textBox">
 											<p id="courseName">집에 가는 길</p>
 											<p id="courseInfo">둘리</p>
@@ -117,7 +117,7 @@
 								
 								<li>
 									<div style="cursor: pointer;" onclick="window.location='';">
-									  	<img id="courseImg" src="../../../assets/image/my-page/sample.jpg">
+									  	<img class="courseImg" src="../../../assets/image/my-page/sample.jpg">
 									  	<div id="textBox">
 											<p id="courseName">신나는 코스</p>
 											<p id="courseInfo">홍길동</p>
@@ -127,7 +127,7 @@
 								</li>
 								<li>
 									<div style="cursor: pointer;" onclick="window.location='';">
-									  	<img id="courseImg" src="../../../assets/image/my-page/sample2.jpg">
+									  	<img class="courseImg" src="../../../assets/image/my-page/sample2.jpg">
 									  	<div id="textBox">
 											<p id="courseName">이건아닌데...</p>
 											<p id="courseInfo">고길동</p>
@@ -137,7 +137,7 @@
 								</li>
 								<li>
 									<div style="cursor: pointer;" onclick="window.location='';">
-									  	<img id="courseImg" src="../../../assets/image/my-page/sample3.jpg">
+									  	<img class="courseImg" src="../../../assets/image/my-page/sample3.jpg">
 									  	<div id="textBox">
 											<p id="courseName">깐따삐야 가는 길</p>
 											<p id="courseInfo">둘리</p>
@@ -147,7 +147,7 @@
 								</li>
 								<li>
 									<div style="cursor: pointer;" onclick="window.location='';">
-									  	<img id="courseImg" src="../../../assets/image/my-page/sample2.jpg">
+									  	<img class="courseImg" src="../../../assets/image/my-page/sample2.jpg">
 									  	<div id="textBox">
 											<p id="courseName">집에 가는 길</p>
 											<p id="courseInfo">둘리</p>
@@ -172,7 +172,7 @@
 							<ol>
 								<li>
 									<div style="cursor: pointer;" onclick="window.location='';">
-									  	<img id="courseImg" src="../../../assets/image/my-page/sample.jpg">
+									  	<img class="courseImg" src="../../../assets/image/my-page/sample.jpg">
 									  	<div id="textBox">
 											<p id="courseName">신나는 코스</p>
 											<p id="courseInfo">홍길동</p>
@@ -182,7 +182,7 @@
 								</li>
 								<li>
 									<div style="cursor: pointer;" onclick="window.location='';">
-									  	<img id="courseImg" src="../../../assets/image/my-page/sample2.jpg">
+									  	<img class="courseImg" src="../../../assets/image/my-page/sample2.jpg">
 									  	<div id="textBox">
 											<p id="courseName">이건아닌데...</p>
 											<p id="courseInfo">고길동</p>
@@ -192,7 +192,7 @@
 								</li>
 								<li>
 									<div style="cursor: pointer;" onclick="window.location='';">
-									  	<img id="courseImg" src="../../../assets/image/my-page/sample3.jpg">
+									  	<img class="courseImg" src="../../../assets/image/my-page/sample3.jpg">
 									  	<div id="textBox">
 											<p id="courseName">깐따삐야 가는 길</p>
 											<p id="courseInfo">둘리</p>
@@ -202,7 +202,7 @@
 								</li>
 								<li>
 									<div style="cursor: pointer;" onclick="window.location='';">
-									  	<img id="courseImg" src="../../../assets/image/my-page/sample2.jpg">
+									  	<img class="courseImg" src="../../../assets/image/my-page/sample2.jpg">
 									  	<div id="textBox">
 											<p id="courseName">집에 가는 길</p>
 											<p id="courseInfo">둘리</p>
@@ -229,7 +229,7 @@
 							<ol>
 								<li>
 									<div style="cursor: pointer;" onclick="window.location='';">
-									  	<img id="courseImg" src="../../../assets/image/my-page/sample.jpg">
+									  	<img class="courseImg" src="../../../assets/image/my-page/sample.jpg">
 									  	<div id="textBox">
 											<p id="courseName">신나는 코스</p>
 											<p id="courseInfo">홍길동</p>
@@ -239,7 +239,7 @@
 								</li>
 								<li>
 									<div style="cursor: pointer;" onclick="window.location='';">
-									  	<img id="courseImg" src="../../../assets/image/my-page/sample2.jpg">
+									  	<img class="courseImg" src="../../../assets/image/my-page/sample2.jpg">
 									  	<div id="textBox">
 											<p id="courseName">이건아닌데...</p>
 											<p id="courseInfo">고길동</p>
@@ -249,7 +249,7 @@
 								</li>
 								<li>
 									<div style="cursor: pointer;" onclick="window.location='';">
-									  	<img id="courseImg" src="../../../assets/image/my-page/sample3.jpg">
+									  	<img class="courseImg" src="../../../assets/image/my-page/sample3.jpg">
 									  	<div id="textBox">
 											<p id="courseName">깐따삐야 가는 길</p>
 											<p id="courseInfo">둘리</p>
@@ -259,7 +259,7 @@
 								</li>
 								<li>
 									<div style="cursor: pointer;" onclick="window.location='';">
-									  	<img id="courseImg" src="../../../assets/image/my-page/sample2.jpg">
+									  	<img class="courseImg" src="../../../assets/image/my-page/sample2.jpg">
 									  	<div id="textBox">
 											<p id="courseName">집에 가는 길</p>
 											<p id="courseInfo">둘리</p>
