--- a/webapp/WEB-INF/views/my-page/main.html
+++ b/webapp/WEB-INF/views/my-page/main.html
@@ -38,8 +38,8 @@
 		
 		
 		<div class="subHeader">
-			<a href="./menubar.html"><img id="menuBar-open" src="../../../assets/image/my-page/menu.png"></a>
-			<p id="title">마이페이지 <img id="myHome" src="../../../assets/image/my-page/house.png"></p>
+			<a href="./menubar.html"><img class="menuBar-open" src="../../../assets/image/my-page/menu.png"></a>
+			<p id="title">마이페이지 <img class="myHome" src="../../../assets/image/my-page/house.png"></p>
 		</div>
 		
 		
@@ -58,7 +58,7 @@
 				<ol>
 					<li>
 						<div style="cursor: pointer;" onclick="window.location='';">
-						  	<img id="courseImg" src="../../../assets/image/my-page/sample.jpg">
+						  	<img class="courseImg" src="../../../assets/image/my-page/sample.jpg">
 						  	<div id="textBox">
 								<p id="courseName">신나는 코스</p>
 								<p id="courseInfo">홍길동</p>
@@ -68,7 +68,7 @@
 					</li>
 					<li>
 						<div style="cursor: pointer;" onclick="window.location='';">
-						  	<img id="courseImg" src="../../../assets/image/my-page/sample2.jpg">
+						  	<img class="courseImg" src="../../../assets/image/my-page/sample2.jpg">
 						  	<div id="textBox">
 								<p id="courseName">이건아닌데...</p>
 								<p id="courseInfo">고길동</p>
@@ -78,7 +78,7 @@
 					</li>
 					<li>
 						<div style="cursor: pointer;" onclick="window.location='';">
-						  	<img id="courseImg" src="../../../assets/image/my-page/sample3.jpg">
+						  	<img class="courseImg" src="../../../assets/image/my-page/sample3.jpg">
 						  	<div id="textBox">
 								<p id="courseName">깐따삐야 가는 길</p>
 								<p id="courseInfo">둘리</p>
@@ -100,7 +100,7 @@
 					
 					<li>
 						<div style="cursor: pointer;" onclick="window.location='';">
-						  	<img id="courseImg" src="../../../assets/image/my-page/sample.jpg">
+						  	<img class="courseImg" src="../../../assets/image/my-page/sample.jpg">
 						  	<div id="textBox">
 								<p id="courseName">신나는 코스</p>
 								<p id="courseInfo">홍길동</p>
@@ -110,7 +110,7 @@
 					</li>
 					<li>
 						<div style="cursor: pointer;" onclick="window.location='';">
-						  	<img id="courseImg" src="../../../assets/image/my-page/sample2.jpg">
+						  	<img class="courseImg" src="../../../assets/image/my-page/sample2.jpg">
 						  	<div id="textBox">
 								<p id="courseName">이건아닌데...</p>
 								<p id="courseInfo">고길동</p>
@@ -120,7 +120,7 @@
 					</li>
 					<li>
 						<div style="cursor: pointer;" onclick="window.location='';">
-						  	<img id="courseImg" src="../../../assets/image/my-page/sample3.jpg">
+						  	<img class="courseImg" src="../../../assets/image/my-page/sample3.jpg">
 						  	<div id="textBox">
 								<p id="courseName">깐따삐야 가는 길</p>
 								<p id="courseInfo">둘리</p>
@@ -130,7 +130,7 @@
 					</li>
 					<li>
 						<div style="cursor: pointer;" onclick="window.location='';">
-						  	<img id="courseImg" src="../../../assets/image/my-page/sample2.jpg">
+						  	<img class="courseImg" src="../../../assets/image/my-page/sample2.jpg">
 						  	<div id="textBox">
 								<p id="courseName">집에 가는 길</p>
 								<p id="courseInfo">둘리</p>
@@ -148,7 +148,7 @@
 				<ol>
 					<li>
 						<div style="cursor: pointer;" onclick="window.location='';">
-						  	<img id="courseImg" src="../../../assets/image/my-page/sample.jpg">
+						  	<img class="courseImg" src="../../../assets/image/my-page/sample.jpg">
 						  	<div id="textBox">
 								<p id="courseName">신나는 코스</p>
 								<p id="courseInfo">홍길동</p>
@@ -168,7 +168,7 @@
 					</li>
 					<li>
 						<div style="cursor: pointer;" onclick="window.location='';">
-						  	<img id="courseImg" src="../../../assets/image/my-page/sample3.jpg">
+						  	<img class="courseImg" src="../../../assets/image/my-page/sample3.jpg">
 						  	<div id="textBox">
 								<p id="courseName">깐따삐야 가는 길</p>
 								<p id="courseInfo">둘리</p>
@@ -178,7 +178,7 @@
 					</li>
 					<li>
 						<div style="cursor: pointer;" onclick="'';">
-						  	<img id="courseImg" src="../../../assets/image/my-page/sample2.jpg">
+						  	<img class="courseImg" src="../../../assets/image/my-page/sample2.jpg">
 						  	<div id="textBox">
 								<p id="courseName">집에 가는 길</p>
 								<p id="courseInfo">둘리</p>
