--- a/webapp/WEB-INF/views/my-page/my-course.html
+++ b/webapp/WEB-INF/views/my-page/my-course.html
@@ -39,8 +39,8 @@
 		
 		
 		<div class="subHeader">
-			<a href="./menubar.html"><img id="menuBar-open" src="../../../assets/image/my-page/menu.png"></a>
-			<p id="title">마이페이지 <img id="myHome" src="../../../assets/image/my-page/house.png"></p>
+			<a href="./menubar.html"><img class="menuBar-open" src="../../../assets/image/my-page/menu.png"></a>
+			<p id="title">마이페이지 <img class="myHome" src="../../../assets/image/my-page/house.png"></p>
 		</div>
 		
 		
@@ -59,7 +59,7 @@
 				<ol>
 					<li>
 						<div style="cursor: pointer;" onclick="window.location='';">
-						  	<img id="courseImg" src="../../../assets/image/my-page/sample2.jpg">
+						  	<img class="courseImg" src="../../../assets/image/my-page/sample2.jpg">
 						  	<div id="textBox">
 								<p id="courseName">신나는 코스</p>
 								<p id="courseInfo">22.07.01</p>
@@ -69,7 +69,7 @@
 					</li>
 					<li>
 						<div style="cursor: pointer;" onclick="window.location='';">
-						  	<img id="courseImg" src="../../../assets/image/my-page/sample2.jpg">
+						  	<img class="courseImg" src="../../../assets/image/my-page/sample2.jpg">
 						  	<div id="textBox">
 								<p id="courseName">이건아닌데...</p>
 								<p id="courseInfo">22.07.01</p>
@@ -79,7 +79,7 @@
 					</li>
 					<li>
 						<div style="cursor: pointer;" onclick="window.location='';">
-						  	<img id="courseImg" src="../../../assets/image/my-page/sample.jpg">
+						  	<img class="courseImg" src="../../../assets/image/my-page/sample.jpg">
 						  	<div id="textBox">
 								<p id="courseName">깐따삐야 가는 길</p>
 								<p id="courseInfo">22.07.01</p>
@@ -89,7 +89,7 @@
 					</li>
 					<li>
 						<div style="cursor: pointer;" onclick="window.location='';">
-						  	<img id="courseImg" src="../../../assets/image/my-page/sample3.jpg">
+						  	<img class="courseImg" src="../../../assets/image/my-page/sample3.jpg">
 						  	<div id="textBox">
 								<p id="courseName">집에 가는 길</p>
 								<p id="courseInfo">22.07.01</p>
@@ -103,7 +103,7 @@
 					
 					<li>
 						<div style="cursor: pointer;" onclick="window.location='';">
-						  	<img id="courseImg" src="../../../assets/image/my-page/sample3.jpg">
+						  	<img class="courseImg" src="../../../assets/image/my-page/sample3.jpg">
 						  	<div id="textBox">
 								<p id="courseName">신나는 코스</p>
 								<p id="courseInfo">22.07.01</p>
@@ -113,7 +113,7 @@
 					</li>
 					<li>
 						<div style="cursor: pointer;" onclick="window.location='';">
-						  	<img id="courseImg" src="../../../assets/image/my-page/sample.jpg">
+						  	<img class="courseImg" src="../../../assets/image/my-page/sample.jpg">
 						  	<div id="textBox">
 								<p id="courseName">이건아닌데...</p>
 								<p id="courseInfo">22.07.01</p>
