--- a/webapp/WEB-INF/views/my-page/my-report.html
+++ b/webapp/WEB-INF/views/my-page/my-report.html
@@ -39,8 +39,8 @@
 		
 		
 		<div class="subHeader">
-			<a href="./menubar.html"><img id="menuBar-open" src="../../../assets/image/my-page/menu.png"></a>
-			<p id="title">마이페이지 <img id="myHome" src="../../../assets/image/my-page/house.png"></p>
+			<a href="./menubar.html"><img class="menuBar-open" src="../../../assets/image/my-page/menu.png"></a>
+			<p id="title">마이페이지 <img class="myHome" src="../../../assets/image/my-page/house.png"></p>
 		</div>
 		
 		
@@ -73,7 +73,7 @@
 							</li>
 							<li id="reportContent">
 								<div style="cursor: pointer;" onclick="window.location='';">
-									<img id="contentImg" src="../../../assets/image/my-page/sample.jpg">
+									<img class="contentImg" src="../../../assets/image/my-page/sample.jpg">
 									<p id="contentTitle">내가 여기 왔다감ㅋ</p>
 									<p id="content">링거 맞고 뛰었다^^</p>
 									<p id="contentDate">2022.07.18 &nbsp; 10:03</p>
@@ -81,7 +81,7 @@
 							</li>
 							<li id="reportContent">
 								<div style="cursor: pointer;" onclick="window.location='';">
-									<img id="contentImg" src="../../../assets/image/my-page/sample.jpg">
+									<img class="contentImg" src="../../../assets/image/my-page/sample.jpg">
 									<p id="contentTitle">우앙우앙우앙</p>
 									<p id="content">우앙우앙우앙^^</p>
 									<p id="contentDate">2022.07.18 &nbsp; 10:03</p>
@@ -89,7 +89,7 @@
 							</li>
 							<li id="reportContent">
 								<div style="cursor: pointer;" onclick="window.location='';">
-									<img id="contentImg" src="../../../assets/image/my-page/sample.jpg">
+									<img class="contentImg" src="../../../assets/image/my-page/sample.jpg">
 									<p id="contentTitle">산책 재밌다</p>
 									<p id="content">산책 다녀왔는데 좋았네</p>
 									<p id="contentDate">2022.07.18 &nbsp; 10:03</p>
@@ -97,7 +97,7 @@
 							</li>
 							<li id="reportContent">
 								<div style="cursor: pointer;" onclick="window.location='';">
-									<img id="contentImg" src="../../../assets/image/my-page/sample.jpg">
+									<img class="contentImg" src="../../../assets/image/my-page/sample.jpg">
 									<p id="contentTitle">무더위</p>
 									<p id="content">요즘 날씨 미친거 같다</p>
 									<p id="contentDate">2022.07.18 &nbsp; 10:03</p>
@@ -105,7 +105,7 @@
 							</li>
 							<li id="reportContent">
 								<div style="cursor: pointer;" onclick="window.location='';">
-									<img id="contentImg" src="../../../assets/image/my-page/sample.jpg">
+									<img class="contentImg" src="../../../assets/image/my-page/sample.jpg">
 									<p id="contentTitle">살려줘ㅠㅠ</p>
 									<p id="content">html/css너무 귀찮다ㅠㅠ</p>
 									<p id="contentDate">2022.07.18 &nbsp; 10:03</p>
