--- a/webapp/WEB-INF/views/my-page/menubar.html
+++ b/webapp/WEB-INF/views/my-page/menubar.html
@@ -42,7 +42,7 @@
 				<div class="menu1">
 					<ol>
 						<li id="mypage">
-							<a href="./main.html">마이페이지 <img id="myHome" src="../../../assets/image/my-page/house.png"></a>
+							<a href="./main.html">마이페이지 <img class="myHome" src="../../../assets/image/my-page/house.png"></a>
 						</li>
 						<li id="bookmark-btn">
 							<a href=""><img id="menuBar-close" src="../../../assets/image/my-page/menu.png"></a>
@@ -56,8 +56,8 @@
 					<ol>
 						<li id="bookmark"><a href="./bookmark.html">즐겨찾기 <img id="bmStar" src="../../../assets/image/my-page/star.png"></a></li>
 						<li id="bookmark-btn">
-							<img id="plus-btn" src="../../../assets/image/my-page/plus.png">&nbsp; 
-							<img id="minus-btn" src="../../../assets/image/my-page/minus.png">
+							<img class="plus-btn" src="../../../assets/image/my-page/plus.png">&nbsp; 
+							<img class="minus-btn" src="../../../assets/image/my-page/minus.png">
 						</li>
 						<li id="menuList"><a href="">서울 근교 코스</a></li>
 						<li id="menuList"><a href="">웃겨 자빠질 코스</a></li>
