--- a/webapp/WEB-INF/views/my-page/bookmark.html
+++ b/webapp/WEB-INF/views/my-page/bookmark.html
@@ -95,7 +95,7 @@
 								</li>
 								<li>
 									<div style="cursor: pointer;" onclick="window.location='';">
-									  	<img id="courseImg" src="../../../assets/image/my-page/sample3.jpg">
+									  	<img class="courseImg" src="../../../assets/image/my-page/sample3.jpg">
 									  	<div id="textBox">
 											<p id="courseName">깐따삐야 가는 길</p>
 											<p id="courseInfo">둘리</p>
