--- a/webapp/WEB-INF/views/my-page/menubar.html
+++ b/webapp/WEB-INF/views/my-page/menubar.html
@@ -45,7 +45,7 @@
 							<a href="./main.html">마이페이지 <img class="myHome" src="../../../assets/image/my-page/house.png"></a>
 						</li>
 						<li id="bookmark-btn">
-							<a href=""><img id="menuBar-close" src="../../../assets/image/my-page/menu.png"></a>
+							<a href=""><img class="menuBar-close" src="../../../assets/image/my-page/menu.png"></a>
 						</li>
 						<li id="menuList"><a href="./my-course.html">나의 코스 보기</a></li>
 						<li id="menuList"><a href="./my-report.html">나의 기록 보기</a></li>
@@ -54,7 +54,7 @@
 				
 				<div class="menu2">
 					<ol>
-						<li id="bookmark"><a href="./bookmark.html">즐겨찾기 <img id="bmStar" src="../../../assets/image/my-page/star.png"></a></li>
+						<li id="bookmark"><a href="./bookmark.html">즐겨찾기 <img class="bmStar" src="../../../assets/image/my-page/star.png"></a></li>
 						<li id="bookmark-btn">
 							<img class="plus-btn" src="../../../assets/image/my-page/plus.png">&nbsp; 
 							<img class="minus-btn" src="../../../assets/image/my-page/minus.png">
