기록 작성하기 사진 추가했을때 창 완성

--- a/webapp/WEB-INF/views/course/r_writeForm.html
+++ b/webapp/WEB-INF/views/course/r_writeForm.html
@@ -210,7 +210,7 @@
 			
 			<div id="course-pic">
 				<div>
-					<img src="../../../assets/image/course/photo.png">
+					<img id="photo-icon" src="../../../assets/image/course/photo.png">
 					<p>코스와 관련된 사진을 등록해주세요.</p>
 					<label for="input-file">사진 추가하기</label>
 					<input type="file" id="input-file">
