스크롤 추가

--- a/webapp/WEB-INF/views/course/r_viewForm.html
+++ b/webapp/WEB-INF/views/course/r_viewForm.html
@@ -72,7 +72,7 @@
 								</div>
 								
 								<div class="record-img">
-									<img src="../../../assets/image/course/img.jpg" width="24px">
+									<img src="../../../assets/image/course/img2.jpg" width="24px">
 								</div>
 							</div>
 						</li>
@@ -96,7 +96,7 @@
 								</div>
 								
 								<div class="record-img">
-									<img src="../../../assets/image/course/img.jpg" width="24px">
+									<img src="../../../assets/image/course/img1.jpg" width="24px">
 								</div>
 							</div>
 						</li>
@@ -168,7 +168,31 @@
 								</div>
 								
 								<div class="record-img">
-									<img src="../../../assets/image/course/img.jpg" width="24px">
+									<img src="../../../assets/image/course/img3.jpg" width="24px">
+								</div>
+							</div>
+						</li>
+						
+						<li>
+							<div class="record-full-content">
+								<div class="record-txt">
+									<div class="record-content">
+										<span class="record">
+											<span class="name bold">우영우</span>
+											<span>이 사건은 재미있습니다. 제가 좋아하는 고래 퀴즈 같아요. 몸무게가 22톤인 암컷 향고래가 500kg에 달하는 대왕오징어를 먹고 6시간 뒤 1.3톤짜리 알을 낳았다면 이 암컷 향고래의 몸무게는 얼마일까요? 정답은 ‘고래는 알을 낳을 수 없다’입니다. 고래는 포유류라 알이 아닌 새끼를 낳으니까요. 무게에만 초점을 맞추면 문제를 풀 수 없습니다. 핵심을 봐야 돼요.</span>
+										</span>
+									</div>
+									<div class="record-info">
+										<span>22.07.18 10:03</span>
+										<span><img src="../../../assets/image/course/snow.png"></span>
+										<span>20℃</span>
+										<span class="box blue">산책</span>
+										<span class="box pink">어려움</span>
+									</div>
+								</div>
+								
+								<div class="record-img">
+									<img src="../../../assets/image/course/img3.jpg" width="24px">
 								</div>
 							</div>
 						</li>
