--- a/webapp/assets/css/course_view.css
+++ b/webapp/assets/css/course_view.css
@@ -177,7 +177,12 @@ input[type=radio] {display:none;}
 }
 .course-view-info .record-info-content {
 	height: 380px;
-	overflow: hidden;
+	overflow: auto;
+}
+.record-info-content::-webkit-scrollbar {
+	-ms-overflow-style: none; /* IE and Edge */
+	scrollbar-width: none; /* Firefox */
+	display: none; /* Chrome, Safari, Opera */
 }
 .course-view-info .course-info-btn {
 	height: 60px;
@@ -202,7 +207,6 @@ input[type=radio] {display:none;}
 .record-info-content .record-full-content {
 	width: 100%;
 	height: auto;
-	overflow: hidden;
 	margin-bottom: 15px;
 	border: 1px solid transparent;
 }
@@ -245,6 +249,12 @@ input[type=radio] {display:none;}
 }
 .pink {background-color: rgb(255, 52, 120);}
 .blue {background-color: rgb(50, 108, 249);}
+/* 기록 사진 */
+.record-img img {
+	width: 24px;
+	height: 24px;
+	object-fit: cover;
+}
 
 
 
