--- a/webapp/WEB-INF/views/user/join-form.html
+++ b/webapp/WEB-INF/views/user/join-form.html
@@ -39,9 +39,13 @@
 						</div>
 						<div class="form-input">
 							<label for="id">아이디</label><input id="id" name="id" type="text">
+							<button type=button id="btn-check">중복확인</button>
 						</div>
 						<div class="form-input">
 							<label for="password">비밀번호</label><input id="password" name="password" type="password"><br>
+						</div>
+						<div class="form-input">
+							<label for="password2">비밀번호 확인</label><input id="password2" name="password2" type="password"><br>
 						</div>
 						<div class="form-input">
 							<label for="ph">전화번호</label><input id="ph" name="ph" type="text">
